crates/plotnik-tests/tests/02-parser/recovery_unexpected/predicate_op_after_children.txt
Q = (call (arguments) == "x")
------------------ DIAGNOSTICS -------------------
error: expected a child node, or `)` to close
 --> query.ptk:1:23
  |
1 | Q = (call (arguments) == "x")
  |                       ^^
